# rocketmq-client-python

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  dev-requirements.txt  install_boostpython.sh  install_gtest.sh  manylinux.sh  package.sh  pytest.ini  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: issue_template.md
ci/: Dockerfile
cmake/: ConfigureChecks.cmake  Findrocketmq.cmake
doc/: Introduction.md  quick-start.md
doc/api-doc/: consumer-push.md  message.md  producer.md
project/: CMakeLists.txt  Makefile
rocketmq/: __init__.py  client.py  consts.py  exceptions.py  ffi.py
sample/: __init__.py  base.py  testConsumer.py  testProducer.py
samples/: consumer.py  producer.py
src/: PythonWrapper.cpp  PythonWrapper.h  PythonWrapper.lo
test/: TestConsumeMessages.py  TestSendMessages.py  __init__.py  config.py  run.py  utils.py
tests/: conftest.py  test_consumer.py  test_producer.py
unitests/: CMakeLists.txt  PythonWrapperTest.cpp
wrapper/: RocketMQBaseClient.py  RocketMQConfig.py  RocketMQConsumeClient.py  RocketMQProduceClient.py  TestConsumeClient.py  TestProduceClient.py
wrapper/configs/: config.json  logging.json
wrapper/utils/: __init__.py  config_util.py  log_util.py
